[tool.poetry]
name = "koha_link_check"
version = "0.1.0"
description = "check links in bib 856$u fields"
authors = ["Eric Phetteplace <phette23@gmail.com>"]
license = "ECL-2.0"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
